--- a/data/widget/widget.html
+++ b/data/widget/widget.html
@@ -12,7 +12,7 @@
                 border: 1px solid #999;
                 padding: 1px;
                 border-radius: 3px;
-                width: 196px;
+                width: 100%;
                 font-size: 10px;
                 position: absolute;
                 top: 0;
