--- a/data/widget/widget.html
+++ b/data/widget/widget.html
@@ -6,13 +6,13 @@
         <style type="text/css">
             body {
                 padding: 0px;
-                margin: 0px;
+                margin: 0px 3px 0 0;
             }
             input {
                 border: 1px solid #999;
                 padding: 1px;
                 border-radius: 3px;
-                width: 100%;
+                width: 190px;
                 font-size: 10px;
                 position: absolute;
                 top: 0;
