Update to new version of bootstrap

--- a/data/panel/panel.html
+++ b/data/panel/panel.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
     <title></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-1.2.0.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="panel.css">
 </head>
 <body>
@@ -13,7 +14,7 @@
     </div>
     <ul class="megaslownik"></ul>
 </div>
-<!--<h3>Ling translation</h3>-->
-<!--<div class="ling"></div>-->
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
